Fix premultipliedAlpha:false with OpenGL renderer.

The setting of the CC layer's PremultipliedAlpha flag was (still!)
wrong in the case where the workaround was taking effect.

Added a new test to catch this. Currently Mac-specific; ChromeOS is
the only other platform that could catch it and there aren't any such
machines on the GPU waterfalls.

Bug: 804061
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ib71832e48d4880defba01f675806294066eb2e4f